# data-sampler

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: archive.py  export.py  preprocess.py  sample.py  upload.py
backend/app/services/: archive_service.py  export_service.py  file_service.py  parser_service.py  preprocessing_service.py  sampler_service.py
backend/app/utils/: preprocessing_utils.py
backend/tests/: test_preprocessing_service.py  test_preprocessing_utils.py  test_sampler_service.py
docs/architecture/: data-sampler-architecture-v2.drawio  data-sampler-architecture-v3.drawio  data-sampler-architecture-v4.drawio  data-sampler-architecture.drawio
